<resources>
    <string name="app_name">Nyenil</string>
    <string name="toProfile">Profile</string>
    <string name="nama">Bagus Dwi Santoso</string>
    <string name="email">baguscodes@gmail.com</string>
    <string name="jajan_name">Nama Jajanan</string>
    <string name="headline">Headline Jajanan</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="vasal">Asal</string>
    <string name="asal">Asal Jajanan</string>
    <string name="vrasa">Rasa</string>
    <string name="rasa">Rasa Jajanan</string>
    <string name="vbahanDasar">Bahan Dasar</string>
    <string name="bahanDasar">Bahan Dasar Jajanan</string>
    <string name="resep">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string-array name="data_name">
        <item>Arem - Arem</item>
        <item>Bubur Sumsum</item>
        <item>Cenil</item>
        <item>Clorot</item>
        <item>Comro</item>
        <item>Dodol</item>
        <item>Emping</item>
        <item>Getuk</item>
        <item>Klepon</item>
        <item>Lemper</item>
    </string-array>
    <string-array name="data_headline">
        <item>Arem-Arem Kebumen, Isi Legit dalam Balutan Nasi Hangat</item>
        <item>Bubur Sumsum, Kenikmatan Legendaris dari Jawa</item>
        <item>Cenil Pacitan, Manisnya Tradisi dalam Setiap Gigitan</item>
        <item>Clorot Purworejo, Nikmatnya Gula Merah dalam Balutan Daun Janur</item>
        <item>Comro, Gurihnya Isi Oncom dalam Balutan Gorengan Khas Sunda</item>
        <item>Dodol Ponorogo, Manis dan Kenyal, Citra Khas Jawa Timu</item>
        <item>Keripik Pahit Biji Melinjo</item>
        <item>Getuk Magelang, Suguhan Tradisional yang Menggugah Selera</item>
        <item>Klepon, Manisnya Kelapa Parut dalam Butiran Ketan Hijau</item>
        <item>Lemper, Nikmatnya Isi Ayam dalam Balutan Ketan Putih</item>
    </string-array>
    <string-array name="data_description">
        <item>Arem-arem adalah makanan khas Kebumen yang terbuat dari beras dan santan, dengan berbagai isian seperti kentang goreng, sambal tempe, atau oncom. Makanan ini biasanya dibungkus dengan daun pisang dan dimasak dengan cara dikukus.</item>
        <item>Bubur sumsum adalah makanan tradisional Jawa yang terbuat dari tepung beras, santan, daun pandan, dan garam. Makanan ini memiliki tekstur lembut dan rasa manis yang lezat.</item>
        <item>Cenil adalah makanan tradisional dari Pacitan, Jawa Timur. Makanan ini terbuat dari tepung ketela pohon atau tepung sagu dan biasanya disajikan dengan parutan kelapa dan sirup gula merah.</item>
        <item>Clorot adalah makanan khas Purworejo yang terbuat dari gula aren, kelapa, santan kelapa, tepung ketan, dan rempah-rempah. Makanan ini dibungkus dengan daun janur (daun kelapa muda) dan dimasak dengan cara dikukus.</item>
        <item>Comro adalah makanan khas Sunda yang terbuat dari singkong dan oncom. Makanan ini digoreng hingga berwarna keemasan dan memiliki rasa yang gurih.</item>
        <item>Dodol adalah makanan khas Ponorogo, Jawa Timur yang terbuat dari santan kelapa, tepung ketan, gula pasir, gula merah, dan garam. Makanan ini memiliki tekstur yang kenyal dan rasa manis.</item>
        <item>Emping: Emping adalah keripik yang terbuat dari biji melinjo atau belinjo. Makanan ini diproduksi di banyak bagian Indonesia, dari Limpung di Jawa Tengah, Pidie di Aceh hingga Sulawesi.</item>
        <item>Getuk adalah makanan khas Magelang, Jawa Tengah yang terbuat dari singkong, gula, dan kelapa. Makanan ini biasanya disajikan dengan taburan kelapa parut.</item>
        <item>Klepon adalah makanan yang diduga berasal dari Jawa. Makanan ini terbuat dari tepung beras ketan, gula merah, dan kelapa parut. Makanan ini biasanya dibuat bulat-bulat dan diberi warna hijau.</item>
        <item>Lemper adalah makanan khas Indonesia yang terbuat dari beras ketan, daging ayam atau abon, dan daun pisang. Makanan ini biasanya dibungkus dengan daun pisang dan dimasak dengan cara dikukus.</item>
    </string-array>
    <string-array name="data_asal">
        <item>Jawa Tengah</item>
        <item>Jawa Tengah</item>
        <item>Pacitan, Jawa Timur</item>
        <item>Purworejo, Jawa Tengah</item>
        <item>Jawa Barat</item>
        <item>Ponorogo, Jawa Timur</item>
        <item>Jawa Tengah, Aceh, Sulawesi.</item>
        <item>Magelang, Jawa Tengah</item>
        <item>Jawa Tengah</item>
        <item>Jawa Tengah</item>
    </string-array>
    <string-array name="data_rasa">
        <item>Gurih, Pedas</item>
        <item>Manis</item>
        <item>Manis</item>
        <item>Manis</item>
        <item>Gurih, Pedas</item>
        <item>Manis</item>
        <item>Pahit</item>
        <item>Manis, Gurih</item>
        <item>Manis</item>
        <item>Gurih</item>

    </string-array>
    <string-array name="data_bahan_dasar">
        <item>Beras</item>
        <item>Tepung Beras</item>
        <item>Tepung Ketela Pohon</item>
        <item>Tepung Ketan, Gula Aren</item>
        <item>Singkong, Oncom</item>
        <item>Tepung Ketan, Santan</item>
        <item>Biji Melinjo</item>
        <item>Singkong</item>
        <item>Tepung Ketan</item>
        <item>Beras Ketan</item>
    </string-array>
</resources>